# ShipNetSim

./: .all-contributorsrc  .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOW_TO_BUILD.md  LICENSE  README.md  SECURITY.md  build_and_package.bat  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
src/: CMakeLists.txt
src/ShipNetSim/: CMakeLists.txt  VersionConfig.h.in  hydrology.h  main.cpp  ship.cpp  ship.h  simulator.cpp  simulator.h
src/ShipNetSim/network/: algebraicvector.cpp  algebraicvector.h  basegeometry.h  boundingbox.cpp  galgebraicvector.cpp  galgebraicvector.h  geometry.h  gline.cpp  gline.h  gpoint.cpp  gpoint.h  line.cpp  line.h  network.cpp  network.h  networkdefaults.h  optimizednetwork.cpp  optimizednetwork.h  optimizedvisibilitygraph.cpp  optimizedvisibilitygraph.h  point.cpp  point.h  polygon.cpp  polygon.h  quadtree.cpp  quadtree.h  seaport.cpp  seaport.h  visibilitygraph.cpp  visibilitygraph.h
src/ShipNetSim/ship/: battery.cpp  battery.h  holtropmethod.cpp  holtropmethod.h  holtropresistancemethod.cpp  holtropresistancemethod.h  hydrology.h  ienergyconsumer.cpp  ienergyconsumer.h  ienergysource.h  ishipcalmresistancestrategy.h  ishipdynamicresistancestrategy.h  ishipengine.cpp  ishipengine.h  ishipgearbox.cpp  ishipgearbox.h  ishippropeller.cpp  ishippropeller.h  ishipresistancepropulsionstrategy.h  ishipresistancestrategy.h  langmaomethod.cpp  langmaomethod.h  readships.h  ship.cpp  ship.h  shipengine.cpp  shipengine.h  shipfuel.cpp  shipfuel.h  shipgearbox.cpp  shipgearbox.h  shippropeller.cpp  shippropeller.h  shipsList.h  tank.cpp  tank.h
src/ShipNetSim/utils/: data.cpp  data.h  logger.cpp  logger.h  updatechecker.cpp  updatechecker.h  utils.h
src/ShipNetSimAdjBuilder/: CMakeLists.txt  main.cpp
src/ShipNetSimCore/: CMakeLists.txt  export.h  requestdata.h  shiploaderworker.cpp  shiploaderworker.h  simulator.cpp  simulator.h  simulatorapi.cpp  simulatorapi.h  simulatorworker.cpp  simulatorworker.h  threadsafeapidatamap.h
src/ShipNetSimCore/network/: algebraicvector.cpp  algebraicvector.h  basegeometry.h  boundingbox.h  dubinspathsmoother.cpp  dubinspathsmoother.h  galgebraicvector.cpp  galgebraicvector.h  gline.cpp  gline.h  gpoint.cpp  gpoint.h  hierarchicalvisibilitygraph.cpp  hierarchicalvisibilitygraph.h  line.cpp  line.h  network.cpp  network.h  networkdefaults.h  optimizednetwork.cpp  optimizednetwork.h  optimizedvisibilitygraph.cpp  optimizedvisibilitygraph.h  point.cpp  point.h  polygon.cpp  polygon.h  quadtree.cpp  quadtree.h  seaport.cpp  seaport.h  seaportloader.cpp  seaportloader.h  visibilitygraph.h
src/ShipNetSimCore/ship/: aisinterface.cpp  aisinterface.h  battery.cpp  battery.h  cyberattack.cpp  cyberattack.h  defaults.h  holtropmethod.cpp  holtropmethod.h  hydrology.h  iaisinterface.cpp  iaisinterface.h  ienergyconsumer.cpp  ienergyconsumer.h  ienergysource.h  ishipcalmresistancestrategy.h  ishipdynamicresistancestrategy.h  ishipengine.cpp  ishipengine.h  ishipgearbox.cpp  ishipgearbox.h  ishippropeller.cpp  ishippropeller.h  langmaomethod.cpp  langmaomethod.h  ship.cpp  ship.h  shipengine.cpp  shipengine.h  shipfuel.cpp  shipfuel.h  shipgearbox.cpp  shipgearbox.h  shippropeller.cpp  shippropeller.h  shipsList.cpp  shipsList.h  tank.cpp  tank.h
src/ShipNetSimCore/utils/: data.cpp  data.h  gdal_compat.h  logger.cpp  logger.h  shipscommon.h  updatechecker.cpp  updatechecker.h  utils.cpp  utils.h
src/ShipNetSimGUI/: CMakeLists.txt  VersionConfig.h.in  defaults.cpp  defaults.h  main.cpp  shipnetsim.cpp  shipnetsim.h  shipnetsim.ui
src/ShipNetSimGUI/gui/: customtablewidget.cpp  globalmapmanager.h  nonemptydelegate.h  osgearthqtwidget.cpp  osgearthqtwidget.h  osgwidget.cpp  osgwidget.h  portclickhandler.h  settingswindow.cpp
src/ShipNetSimGUI/gui/components/: checkboxdelegate.h  comboboxdelegate.h  customplot.cpp  customplot.h  customtablewidget.cpp  customtablewidget.h  disappearinglabel.cpp  disappearinglabel.h  enginepowerpopupform.h  enginerpmefficiencypopupform.h  generalPopupForm.h  globalmapmanager.cpp  globalmapmanager.h  intnumericdelegate.h  nonemptydelegate.h  numericdelegate.h  osgearthqtwidget.cpp  osgearthqtwidget.h  osgwidget.h  portclickhandler.h  reportwidget.cpp  reportwidget.h  simulationworker.cpp  simulationworker.h  spinnerwidget.cpp  spinnerwidget.h  textboxbuttondelegate.h  textboxdelegate.h
src/ShipNetSimGUI/gui/media/: Logo256x256.icns  src.qrc
src/ShipNetSimGUI/gui/windowMangement/: aboutwindow.ui  processingwindow.cpp  processingwindow.h  processingwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  shipnetsim.cpp  shipnetsim.h  shipnetsim.ui  shipnetsimui.cpp  shipnetsimui.h
src/ShipNetSimGUI/utils/: configurationmanager.cpp  configurationmanager.h  defaults.cpp  defaults.h  errorhandler.cpp  errorhandler.h  guiutils.h  unittype.h
src/ShipNetSimInstaller/: CMakeLists.txt
src/ShipNetSimRabbitMQConfig/: CMakeLists.txt  RabbitMQConfigDialog.cpp  RabbitMQConfigDialog.h  main.cpp
src/ShipNetSimServer/: CMakeLists.txt  SimulationServer.h  SimulationWorker.h  main.cpp  simulationserver.cpp  simulationserver.h  simulationworker.cpp  simulationworker.h
src/ShipNetSimServer/utils/: serverutils.h
src/data/: NE1_HR_LC_SR_W_DR.earth  NE1_HR_LC_SR_W_DR.tif  WaterDepth.tif  WindSpeedEast.tif  WindSpeedNorth.tif  cargoShip.gltf  ne_110m_ocean.dbf  ne_110m_ocean.shp  ne_110m_ocean.shx  ports.README.md  salinity.tif  salinity.tif.aux.xml  sampleProject.sts  waterbody.txt  waveHeight.tif  wavePeriod.tif
src/rabbitmq-config/: CMakeLists.txt  RabbitMQConfigDialog.cpp  RabbitMQConfigDialog.h
src/resources/icons/: icons.qrc
src/test/: CMakeLists.txt  holtropresistancemethodtest.cpp  holtropresistancemethodtest.h  hydrologytest.cpp  hydrologytest.h  shiptest.cpp  shiptest.h  testHandler.cpp
tests/: CMakeLists.txt  test_gline.cpp  test_gpoint.cpp  test_hierarchicalvisibilitygraph.cpp  test_integration.cpp  test_optimizednetwork.cpp  test_optimizedvisibilitygraph.cpp  test_polygon.cpp  test_quadtree.cpp
(+13 files in other folders)
